fixed daterangepicker visibility bug

--- a/Prototypes/CSS/profile.css
+++ b/Prototypes/CSS/profile.css
@@ -23,7 +23,7 @@
 
 @media (min-width: 992px) {
     .daterangepicker.show-calendar {
-        display: flex !important;
+        display: flex;
     }
 }
 
